--- a/src/main/resources/swp/app/todoliste/app-view.fxml
+++ b/src/main/resources/swp/app/todoliste/app-view.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="swp.app.todoliste.AppController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<Pane fx:id="p_root" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swp.app.todoliste.AppController">
+<SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <items>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+      <VBox fx:id="vBox_left" prefHeight="200.0" prefWidth="100.0" />
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Button fx:id="b_edit" mnemonicParsing="false" text="Aufgabe bearbeiten" />
+            <Button fx:id="b_delete" mnemonicParsing="false" text="Aufgabe löschen" />
+            <Button fx:id="b_add" mnemonicParsing="false" text="Aufgabe hinzufügen" />
+         </children>
+      </VBox>
+   </items>
+</SplitPane>
+</Pane>
